# sto

./: CMakeLists.txt  LICENSE  README.md
include/: dsto.hpp  sto.hpp  sto_utils.hpp
test/: test_benchmark_sto.cpp  test_sto.cpp
